--- a/src/css/pages/remodelingIlKanPage.module.css
+++ b/src/css/pages/remodelingIlKanPage.module.css
@@ -4,7 +4,7 @@
   /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  /* gap: 40px; */
 }
 .headerDiv {
   font-size: 40px;
@@ -70,7 +70,7 @@
   background-color: #f5f6f8;
   height: 140px;
   border-radius: 16px;
-  margin-top: 20px;
+  margin-top: 60px;
   display: flex;
   flex-direction: column;
   padding: 30px 80px 10px 80px;
@@ -91,8 +91,9 @@
 }
 .resultDiv {
   background-color: #f5f6f8;
-  border-radius: 16px;
-  margin-top: 20px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  margin-top: 46px;
   display: flex;
   flex-direction: column;
   padding: 30px 80px 100px 80px;
@@ -106,4 +107,39 @@
   background-color: #d9d9d9;
   height: 700px;
   border-radius: 16px;
+}
+.formBtn {
+  display: flex;
+  justify-content: center;
+  height: 110px;
+  align-items: center;
+  background-color: #e2efff;
+  border: none;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out, transform 0.1s ease-in-out;
+}
+
+.formBtn:hover {
+  background-color: #d1e5ff;
+}
+
+.formBtn:active {
+  background-color: #c4daff;
+  /* transform: scale(0.985); */
+}
+.formBtn span {
+  color: #092f63;
+  font-size: 25px;
+  font-weight: 400;
+  margin-left: 10px;
+}
+.formBtn:disabled {
+  cursor: default;
+  background-color: #e0e0e0;
+}
+
+.formBtn:disabled span {
+  color: #a0a0a0;
 }
