--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -22,7 +22,7 @@
 
 .video {
   position: absolute;
-  top: -100px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -33,7 +33,7 @@
 
 .content {
   position: absolute;
-  bottom: 200px;
+  bottom: 150px;
   z-index: 1;
   /* text-align: center; */
 }
