feat : 화면 아래 지원 버튼 구현

--- a/src/css/pages/jobsApplicationPage.module.css
+++ b/src/css/pages/jobsApplicationPage.module.css
@@ -98,3 +98,22 @@
   align-items: center;
   gap: 27px;
 }
+
+.submitButton {
+  display: block;
+  width: 698px;
+  height: 120px;
+  flex-shrink: 0;
+  border-radius: 60px;
+  border: none;
+  background: #5290ff;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  line-height: 120px;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 70px;
+  margin-bottom: 70px;
+  cursor: pointer;
+}
