--- a/src/css/pages/kanDetailPage.module.css
+++ b/src/css/pages/kanDetailPage.module.css
@@ -6,6 +6,11 @@
   width: 89%;
   padding: 0 90px; /* x축 패딩 90px */
 }
+.writerImage {
+  width: 36px;
+  height: 36px;
+  border-radius: 100%;
+}
 .imageBox {
   width: 1203px;
   height: 576px;
