--- a/src/css/pages/jobsDetailPage.module.css
+++ b/src/css/pages/jobsDetailPage.module.css
@@ -9,8 +9,8 @@
 
 .applyBtn {
   display: block;
-  width: 698px;
-  height: 120px;
+  width: 367px;
+  height: 80px;
   flex-shrink: 0;
   border-radius: 60px;
   border: none;
@@ -22,6 +22,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 74px;
+  line-height: 80px;
 }
 
 /* === 구인 공고 스타일 === */
@@ -282,7 +283,6 @@
   font-weight: 400;
   line-height: 36px;
   /* 스크린샷의 91과 95px에 맞게 패딩 추가 */
-
   box-sizing: border-box; /* 패딩이 width에 포함되도록 설정 */
   white-space: pre-line;
 }
