--- a/src/css/pages/jobsSuccessPage.module.css
+++ b/src/css/pages/jobsSuccessPage.module.css
@@ -1,14 +1,26 @@
 .wrapper {
   min-height: 60vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
-  font-weight: 600;
-  color: #2d8f6f;
-  background: #f7faf9;
-  border-radius: 16px;
-  margin: 40px auto;
-  max-width: 500px;
-  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.07);
+}
+.logoSize {
+  width: 300px;
+  height: 300px;
+}
+.labelSize {
+  display: flex;
+  width: 699px;
+  height: 86px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #000;
+  text-align: center;
+  font-family: "Noto Sans KR";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
