--- a/src/css/components/myPage/registeredWork.module.css
+++ b/src/css/components/myPage/registeredWork.module.css
@@ -26,3 +26,124 @@
   flex-direction: column;
   /* gap: 20px; */
 }
+.itemContainer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 260px;
+}
+.itemContainer > img {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.itemContent {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  /* background-color: red; */
+  height: 160px;
+  /* border: 1px solid black; */
+
+  padding: 25px 35px 15px 20px;
+}
+.itemTopDiv {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.itemTopDiv span {
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.itemTitleDiv {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.itemTitle {
+  font-size: 25px;
+  font-weight: 500;
+}
+.price {
+  font-size: 25px;
+  font-weight: 700;
+  color: #5290ff;
+}
+.date {
+  font-size: 20px;
+  font-weight: 400;
+  margin-right: 20px;
+}
+.itemBottomDiv {
+  /* background-color: red; */
+  /* border: 1px black solid; */
+  flex: 1;
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+}
+.leftDiv {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+.performerSelectDiv,
+.readyBtn {
+  width: 200px;
+  border: 1px solid #092f63;
+  border-radius: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+.dateSelectDiv {
+  width: 485px;
+  border: 1px solid #092f63;
+  border-radius: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+}
+.dateSelectDiv span {
+  font-size: 20px;
+  font-weight: 400;
+  color: #a7a7a7;
+  flex: 1;
+  text-align: center;
+}
+.readyBtn {
+  justify-content: center;
+}
+.readyBtn span {
+  font-size: 20px;
+  font-weight: 400;
+  color: #092f63;
+  margin-left: 10px;
+}
+.performerSelectDiv img,
+.dateSelectDiv img {
+  margin-left: 20px;
+}
+
+.performerSelectDiv span {
+  font-size: 20px;
+  font-weight: 400;
+  color: #092f63;
+  margin-left: 20px;
+}
+.editDiv {
+  background-color: #f5f6f8;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.editDiv span {
+  font-size: 14px;
+  font-weight: 400;
+  margin-right: 10px;
+}
