--- a/src/css/components/myPage/registeredWork.module.css
+++ b/src/css/components/myPage/registeredWork.module.css
@@ -42,10 +42,10 @@
   flex-direction: column;
   background-color: #ffffff;
   /* background-color: red; */
-  height: 160px;
+  height: 120px;
   /* border: 1px solid black; */
 
-  padding: 25px 35px 15px 20px;
+  padding: 40px 35px 15px 20px;
 }
 .itemTopDiv {
   display: flex;
@@ -107,6 +107,7 @@
   display: flex;
   align-items: center;
   padding-right: 20px;
+  cursor: pointer;
 }
 .dateSelectDiv span {
   font-size: 20px;
