feat: 캘린더 기능 및 레이아웃 구현

--- a/src/css/pages/kanPaymentPage.module.css
+++ b/src/css/pages/kanPaymentPage.module.css
@@ -9,7 +9,6 @@
 .imageBox {
   width: 1203px;
   height: 576px;
-  margin-top: 100px;
 }
 .postingAreaImageBox {
   width: 427px;
@@ -255,4 +254,37 @@
   height: 30px;
   border-radius: 50%;
   margin-top: 5px;
+}
+
+.rentalBox {
+  display: flex;
+  flex-direction: column;
+  width: 1061px;
+  height: 900px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #f5f6f8;
+}
+.rentalLabelBox {
+  display: flex;
+  width: 247px;
+  height: 29px;
+
+  color: #000;
+  font-family: "Noto Sans KR";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  margin-left: 90px;
+  margin-top: 38px;
+  margin-bottom: 28px;
+}
+
+.rentalCalender {
+  width: 929px;
+  height: 745px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #fff;
+  margin-left: 90px;
 }
