--- a/src/css/components/kanPost/kanField3.module.css
+++ b/src/css/components/kanPost/kanField3.module.css
@@ -20,46 +20,72 @@
   padding-right: 66px;
   color: #000;
 }
+
 .fieldList {
+  margin-left: 112px;
+  display: flex;
+  gap: 23px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+/* 공통 카드 크기 */
+.card,
+.addCard {
+  position: relative;
+  width: 273px; /* 필요 시 조절 */
+  height: 120px; /* 필요 시 조절 */
+  border-radius: 10px;
+}
+
+/* 썸네일 카드 */
+.card {
+  margin: 0;
+  overflow: hidden;
+  background: #d9d9d9; /* 회색 배경 */
+}
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+.removeBtn {
+  position: absolute;
+  top: 17px;
+  right: 17px;
+  width: 10px;
+  height: 10px;
+  border: none;
+  /* border-radius: 50%; */
+  background: none;
+  color: #fff;
+  /* line-height: 22px; */
+  text-align: center;
+  font-size: 10px;
+  cursor: pointer;
+}
+
+/* 추가 버튼 카드 */
+.addCard {
+  border: none;
+  background: #e2efff;
   display: flex;
   flex-direction: column;
-  padding: 0 90px;
-  gap: 14px;
-}
-
-.fieldItem {
-  display: flex;
+  justify-content: center;
   align-items: center;
-  gap: 14px;
+  gap: 6px;
+  cursor: pointer;
 }
-
-.itemTitle {
-  display: flex;
-  align-items: center;
-  width: 103px;
-  height: 45px;
+.addIcon {
+  display: inline-flex;
+}
+.addText {
   font-size: 20px;
+  color: #092f63;
 }
 
-.itemDesc {
-  width: 100%;
-  height: 45px;
-  border-radius: 10px;
-  color: #000;
-  border: none;
-  font-size: 16px;
-  padding-left: 16px;
-}
-
-.itemDesc::placeholder {
-  color: #808080;
-}
-
-/* .itemDesc:focus {
-  outline: none;
-} */
-.icon {
-  width: 40px;
-  height: 40px;
-  flex-shrink: 0;
+/* 숨김 파일 인풋 */
+.hiddenInput {
+  display: none;
 }
