--- a/src/css/GlobalLayout.module.css
+++ b/src/css/GlobalLayout.module.css
@@ -39,19 +39,6 @@ a {
   z-index: 1000; /* 다른 요소 위에 나타나도록 설정 */
 }
 
-/* 로고들을 담는 flex 컨테이너 */
-.logoBox {
-  display: flex;
-  gap: 30px;
-}
-
-/* 개별 로고 이미지 */
-.logo {
-  width: 40px;
-  height: 40px;
-  flex-shrink: 0;
-}
-
 /* 메인 콘텐츠 영역 */
 .content {
   margin-top: 100px;
@@ -78,4 +65,53 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* 로고들을 담는 flex 컨테이너 */
+.logoBox {
+  padding-bottom: 50px;
+  position: relative;
+}
+
+/* 개별 로고 이미지 */
+.logo {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  margin-right: 30px;
+}
+.logout {
+  cursor: pointer;
+  position: absolute;
+  width: 130px;
+  height: 55px;
+  background-color: #eef3fc;
+  font-size: 22px;
+  font-weight: 400;
+  bottom: 0;
+  transform: translate(-60%, 30%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  border-radius: 16px;
+  opacity: 0;
+  transition: opacity 0.1s;
+  pointer-events: none;
+}
+
+.logout::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  transform: translate(220%, -100%);
+  border-width: 0 7px 10px 7px;
+  border-style: solid;
+  border-color: transparent transparent #eef3fc transparent;
+}
+/* 기존 코드 유지 */
+.logoBox:hover .logout,
+.logout:hover {
+  opacity: 1;
+  pointer-events: auto;
 }
