--- a/src/css/components/myPage/profile.module.css
+++ b/src/css/components/myPage/profile.module.css
@@ -10,9 +10,9 @@
   font-weight: 500;
 }
 .profileBody {
+  height: 400px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
 }
 .leftDiv {
   width: 70%;
@@ -24,8 +24,7 @@
   align-items: center; */
   border-radius: 16px;
 }
-.leftHeader,
-.rightHeader {
+.leftHeader {
   display: flex;
   align-items: center;
   height: 60px;
@@ -33,12 +32,10 @@
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
-.leftHeader img,
-.rightHeader img {
+.leftHeader img {
   margin-left: 10px;
 }
-.leftHeader span,
-.rightHeader span {
+.leftHeader span {
   font-size: 25px;
   color: #092f63;
   font-weight: 400;
@@ -46,7 +43,11 @@
 }
 
 .leftContent {
+  background-color: #f5f6f8;
   flex: 1;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
   /* background-color: red; */
 }
 .leftDivFooter {
@@ -79,15 +80,15 @@
 }
 .imgAndContentDiv {
   /* background-color: green; */
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: row;
   align-items: end;
   margin-left: 65px;
 }
 .profileImg {
-  height: 220px;
-  width: 140px;
+  height: 250px;
+  width: 160px;
   overflow: hidden;
   /* background-color: #d9d9d9; */
 }
@@ -98,10 +99,10 @@
 }
 
 .profileContent {
-  margin-left: 30px;
+  margin-left: 80px;
   display: flex;
   flex-direction: column;
-  height: 220px;
+  height: 250px;
   /* width: 100%; */
 }
 .nameDiv {
@@ -121,7 +122,7 @@
   flex: 7;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   /* justify-content: space-between; */
 }
 
