--- a/src/css/components/modal.module.css
+++ b/src/css/components/modal.module.css
@@ -18,11 +18,11 @@
   left: 0;
   height: 100%;
   width: 100%;
-  /* display: flex;
-   justify-content: center; */
+  display: flex;
+  justify-content: center;
   background: rgba(0, 0, 0, 0.5);
   pointer-events: auto;
-  z-index: 999;
+  z-index: 9999;
 }
 .modalHeader {
   display: flex;
