--- a/src/css/components/jobPost/postField2.module.css
+++ b/src/css/components/jobPost/postField2.module.css
@@ -67,6 +67,9 @@
   color: #808080;
 }
 
-/* .itemDesc:focus {
-  outline: none;
-} */
+.errorText {
+  color: #d41114;
+  margin: 0;
+  margin-top: 12px;
+  margin-left: 91px;
+}
