--- a/src/css/components/jobPost/postField3.module.css
+++ b/src/css/components/jobPost/postField3.module.css
@@ -63,3 +63,10 @@
   height: 40px;
   flex-shrink: 0;
 }
+
+.errorText {
+  color: #d41114;
+  margin: 0;
+  margin-left: 124px;
+  /* margin-top: 20px; */
+}
