--- a/src/css/pages/kanPaymentPage.module.css
+++ b/src/css/pages/kanPaymentPage.module.css
@@ -17,10 +17,11 @@
 }
 
 .applyBtn {
-  display: block;
-  width: 698px;
-  height: 120px;
-  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 367px;
+  height: 80px;
   border-radius: 60px;
   border: none;
   background: #5290ff;
@@ -292,17 +293,17 @@
 
 .payMentButton {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 367px;
   height: 80px;
-  padding: 11px 135px;
-  justify-content: center;
-  align-items: center;
+
   gap: 10px;
   flex-shrink: 0;
-  margin-top: 60px;
+  margin-top: 24px;
   border-radius: 60px;
   background: #5290ff;
-  margin-bottom: 137px;
+  margin-bottom: 142px;
   cursor: pointer;
 }
 
