feat: 의뢰자 - 수행자 api 연동

--- a/src/css/components/myPage/registeredWork.module.css
+++ b/src/css/components/myPage/registeredWork.module.css
@@ -61,11 +61,14 @@
 .itemTitleDiv {
   display: flex;
   align-items: center;
+  /* width: 100%; */
   justify-content: space-between;
 }
 
 .itemTitle {
   font-size: 25px;
+  width: 800px;
+  /* background-color: red; */
   font-weight: 500;
 }
 .price {
@@ -77,6 +80,8 @@
   font-size: 20px;
   font-weight: 400;
   margin-right: 20px;
+  /* position: absolute;
+  right: 40px; */
 }
 .itemBottomDiv {
   /* background-color: red; */
@@ -252,4 +257,18 @@
 .inRangeDay {
   background-color: #e2efff; /* 시작-끝 사이 날짜 연한 파랑 */
   /* border-radius: 50%; */
+}
+.standByBtn {
+  width: 270px;
+  border: 1px solid #092f63;
+  border-radius: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.standByBtn span {
+  font-size: 20px;
+  color: #092f63;
+  margin-left: 10px;
 }
