--- a/src/css/pages/kanSuccessPage.module.css
+++ b/src/css/pages/kanSuccessPage.module.css
@@ -95,3 +95,16 @@
   margin-bottom: 144px;
   cursor: pointer;
 }
+
+.date {
+  margin-top: 20px;
+  width: 518px;
+  height: 31px;
+  color: #5290ff;
+  line-height: 32px;
+  font-family: "Noto Sans KR";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  margin-left: 90px;
+}
