--- a/src/css/components/myPage/progressingIlKan.module.css
+++ b/src/css/components/myPage/progressingIlKan.module.css
@@ -46,9 +46,15 @@
 .itemImgDiv {
   width: 320px;
   height: 170px;
+  overflow: hidden;
   background-color: #d9d9d9;
   border-top-left-radius: 16px;
   border-bottom-right-radius: 16px;
+}
+.itemImgDiv img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .itemRightDiv {
   /* background-color: blue; */
