--- a/src/css/components/myPage/registedIlKan.module.css
+++ b/src/css/components/myPage/registedIlKan.module.css
@@ -30,6 +30,11 @@
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
+.itemHeader img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .itemContent {
   flex: 1;
   padding: 20px 20px 15px 20px;
