--- a/src/css/components/myPage/applicationWork.module.css
+++ b/src/css/components/myPage/applicationWork.module.css
@@ -18,17 +18,16 @@
   margin-left: 15px;
 }
 .body {
-  /* height: 400px; */
-  /* border-bottom-left-radius: 16px;
-  border-bottom-right-radius: 16px; */
-  /* padding: 40px 70px; */
   display: flex;
   flex-direction: column;
-  /* gap: 20px; */
+  gap: 20px;
+  height: 320px;
+  overflow-y: auto;
 }
+
 .itemContainer {
   /* background-color: red; */
-  height: 150px;
+  min-height: 140px;
   padding: 0 60px 0 30px;
   border-bottom: 2.5px solid #d9d9d9;
   display: flex;
