--- a/src/css/components/myPage/progressingIlKan.module.css
+++ b/src/css/components/myPage/progressingIlKan.module.css
@@ -27,10 +27,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  height: 300px;
+  overflow-y: auto;
 }
 .itemContainer {
   background-color: #ffffff;
-  height: 320px;
+  min-height: 320px;
   border-radius: 16px;
   /* padding: 20px; */
   display: flex;
