--- a/src/css/components/myPage/registedIlKan.module.css
+++ b/src/css/components/myPage/registedIlKan.module.css
@@ -26,7 +26,7 @@
 .itemHeader {
   height: 190px;
   background-color: #d9d9d9;
-  padding: 10px;
+  /* padding: 10px; */
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
@@ -34,6 +34,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 .itemContent {
   flex: 1;
