feat: 상태 표시 span 추가

--- a/src/css/components/myPage/progressingWork.module.css
+++ b/src/css/components/myPage/progressingWork.module.css
@@ -48,6 +48,11 @@
   font-size: 25px;
   font-weight: 500;
 }
+.itemTitle span {
+  color: #3782fa;
+  font-size: 16px;
+  margin-left: 10px;
+}
 .itemPrice {
   font-size: 25px;
   font-weight: 700;
