--- a/src/css/pages/jobsApplicationPage.module.css
+++ b/src/css/pages/jobsApplicationPage.module.css
@@ -68,6 +68,7 @@
   flex-direction: column;
   align-items: center;
   width: 1061px;
+  height: 180px;
   flex-shrink: 0;
   border-radius: 10px;
   background: #f5f6f8;
