--- a/src/css/components/myPage/registedIlKan.module.css
+++ b/src/css/components/myPage/registedIlKan.module.css
@@ -17,7 +17,7 @@
 }
 .itemDiv {
   background-color: #f5f6f8;
-  height: 350px;
+  height: 410px;
   /* width: 30%; */
   border-radius: 16px;
   display: flex;
@@ -26,42 +26,16 @@
 .itemHeader {
   height: 190px;
   background-color: #d9d9d9;
+  /* padding: 10px; */
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
-  position: relative;
-  display: flex;
-  justify-content: center;
 }
-
-.itemHeader > img {
+.itemHeader img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
-}
-
-.iconOverlay {
-  position: absolute;
-  /* background-color: red; */
-  width: 95%;
-  /* height: 100%; */
-  /* top: 10px;
-  left: 10px; */
-  z-index: 2;
-  margin-top: 10px;
-  /* margin: 10px; */
-}
-.iconOverlay > img {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  cursor: pointer;
-}
-.iconOverlay > img:hover {
-  transform: scale(1.2);
 }
 .itemContent {
   flex: 1;
@@ -79,11 +53,6 @@
   -webkit-line-clamp: 2;
   line-clamp: 2;
   line-height: 1.5;
-}
-.itemAddress {
-  font-size: 16px;
-  font-weight: 400;
-  color: #808080;
 }
 .itemPrice {
   font-size: 25px;
