--- a/src/css/components/kanPost/addressDropdown.module.css
+++ b/src/css/components/kanPost/addressDropdown.module.css
@@ -82,6 +82,9 @@
   font-size: 16px;
   line-height: 1;
 }
+.item:hover {
+  background: #bbd8ff;
+}
 .selected {
   font-weight: bold;
   background: #bbd8ff;
