--- a/src/css/components/kanPost/kanField2.module.css
+++ b/src/css/components/kanPost/kanField2.module.css
@@ -47,7 +47,7 @@
 }
 
 .textBox {
-  width: 100%;
+  width: 300px;
   display: flex;
   flex-direction: column;
   gap: 6px;
@@ -62,8 +62,18 @@
   border: none;
   font-size: 16px;
 }
+.itemPayDesc {
+  /* text-align: right; */
+  color: #000;
+  border: none;
+  font-size: 16px;
+}
 
 .itemDesc::placeholder {
+  color: #808080;
+}
+.itemPayDesc::placeholder {
+  text-align: left;
   color: #808080;
 }
 
@@ -72,4 +82,31 @@
   margin: 0;
   margin-top: 12px;
   margin-left: 91px;
+}
+
+.itemPayWrap {
+  position: relative;
+  display: inline-block;
+}
+
+/* 입력 우측정렬 + '원'과 겹치지 않게 패딩 */
+.itemPayDesc {
+  /* width: 200px; 프로젝트에 맞게 조절 */
+  font-size: 16px;
+  color: #000;
+  border: none;
+  text-align: right; /* ← 우측 정렬 */
+  padding-right: 12px; /* '원' 자리 확보 */
+  outline: none;
+}
+
+/* 입력창 오른쪽에 고정되는 '원' 라벨 */
+.unit {
+  position: absolute;
+  /* right: 8px; */
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
+  pointer-events: none; /* 클릭 막기 */
+  font-size: 14px;
 }
