--- a/src/css/components/kanPost/tagDropdown.module.css
+++ b/src/css/components/kanPost/tagDropdown.module.css
@@ -12,12 +12,13 @@
   align-items: center;
   justify-content: space-between;
   padding: 0;
+  padding-left: 12px;
   padding-right: 12px;
   cursor: pointer;
 }
 
 .value {
-  font-size: 20px;
+  font-size: 16px;
   color: #000;
 }
 .placeholder {
@@ -48,7 +49,7 @@
   height: 62px;
   display: flex;
   align-items: center;
-  /* padding-left: 24px; */
+  padding-left: 12px;
   border-top: 1px solid #d9d9d9;
   cursor: pointer;
 }
