--- a/src/css/pages/login.module.css
+++ b/src/css/pages/login.module.css
@@ -29,7 +29,7 @@
   display: flex;
   /* gap: 20px; */
   /* background-color: blue; */
-  width: 100%;
+  width: 90%;
   justify-content: space-between;
   margin-top: 25px;
   margin-bottom: 40px;
@@ -48,11 +48,11 @@
 .userItem img {
   transition: transform 0.3s ease;
 }
-.userItem:hover img,
+/* .userItem:hover img,
 .userItem:hover .subLabel,
 .userItem:hover .label {
   transform: scale(1.2);
-}
+} */
 
 .subLabel {
   font-size: 20px;
@@ -67,20 +67,22 @@
 }
 .userItem:hover {
   padding: 1.39rem;
-  box-shadow: 0 0 0.56rem #5290ff;
-  background-color: #5290ff;
-  color: white;
+  /* box-shadow: 0 0 0.56rem #5290ff; */
+  background-color: #e2eeff;
+  /* color: white; */
 }
 .userItemSelected {
   padding: 1.39rem;
-  box-shadow: 0 0 0.56rem #5290ff;
-  background-color: #5290ff;
-  color: white;
+  /* box-shadow: 0 0 0.56rem #5290ff; */
+  background-color: #e2eeff;
+  /* color: white; */
+  border: 4px solid #092f63;
 }
 .userItemSelected img,
 .userItemSelected .subLabel,
 .userItemSelected .label {
-  transform: scale(1.2);
+  /* transform: scale(1.2); */
+  color: black;
 }
 
 .error {
