--- a/src/css/components/myPage/registedIlKan.module.css
+++ b/src/css/components/myPage/registedIlKan.module.css
@@ -76,9 +76,9 @@
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
-  line-height: 1.5;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  /* line-height: 1.5; */
 }
 .itemAddress {
   font-size: 16px;
