--- a/src/css/components/jobPost/postField4.module.css
+++ b/src/css/components/jobPost/postField4.module.css
@@ -49,6 +49,13 @@
   flex-shrink: 0;
 }
 
+.charCount {
+  text-align: right;
+  font-size: 12px;
+  color: #888;
+  margin-top: 4px;
+}
+
 .errorText {
   color: #d41114;
   margin: 0;
