--- a/src/css/components/kanMatch/kanMatchItem.module.css
+++ b/src/css/components/kanMatch/kanMatchItem.module.css
@@ -33,9 +33,17 @@
   margin: 0px;
   font-size: 24px;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 1.4;
   overflow: hidden;
   min-height: 81px;
+  padding: 0;
+}
+
+.address {
+  margin: 0px;
+  line-height: 1.5;
+  font-size: 16px;
+  color: #808080;
 }
 
 .meta {
