fix: 일거리 상세페이지 색 변경

--- a/src/css/pages/jobsDetailPage.module.css
+++ b/src/css/pages/jobsDetailPage.module.css
@@ -273,7 +273,7 @@
   width: 1061px;
   height: 900px;
   flex-shrink: 0;
-  background: #f0f5ff;
+  background: #f5f6f8;
 }
 
 .jobDetailsSubtitle {
