--- a/src/css/pages/jobsDetailPage.module.css
+++ b/src/css/pages/jobsDetailPage.module.css
@@ -25,7 +25,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 142px;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 }
 
 .font {
@@ -268,6 +268,7 @@
   height: 900px;
   flex-shrink: 0;
   background: #f0f5ff;
+  margin-bottom: 40px;
 }
 
 .jobDetailsSubtitle {
