--- a/src/css/pages/kanDetailPage.module.css
+++ b/src/css/pages/kanDetailPage.module.css
@@ -242,8 +242,9 @@
   display: flex;
   width: 875px;
   height: 29px;
-  flex-direction: column;
-  justify-content: center;
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  align-items: center;
   flex-shrink: 0;
   color: #000;
   font-family: "Noto Sans KR";
@@ -254,7 +255,11 @@
   margin-bottom: 32px;
   margin-top: 38px;
 }
-
+.detailAreaSubtitle img {
+  height: 30px;
+  width: 30px;
+  margin-right: 10px;
+}
 .detailAreaContent {
   width: 875px;
   height: 741px; /* 고정 뷰포트 높이 */
